wordpress/wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wordpress-deploy
  name: wordpress-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-deploy
  strategy: {}
  template:
    metadata:
      labels:
        app: wordpress-deploy
    spec:
      containers:
      - image: wordpress:php8.2-apache
        name: wordpress
        resources: {}
        ports:
        - containerPort: 80
