wordpress/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress-deploy
  name: wordpress-deploy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress-deploy
status:
  loadBalancer: {}
